# website_availability_monitor_kafka

./: .gitignore  .pre-commit-config.yaml  README.md  config-example.ini  pyproject.toml
.github/workflows/: tests.yml
tests/: test_integration_system.py  test_monitor.py
website_availability_monitor_kafka/: __main__.py  consumer.py  monitor.py  monitor.sql  postgress_store.py  producer.py
